{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 252,
  "lineage": "c41099f0-b24d-9c3e-2a52-dc5176294133",
  "resources": [
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cni",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "179"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.409-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-controlnetworkinterface",
            "log_config": [],
            "name": "k8s-controlnetworkinterface",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-controlnetworkinterface",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-cni"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.401-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-http",
            "log_config": [],
            "name": "k8s-http",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:39.953-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-https",
            "log_config": [],
            "name": "k8s-https",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:39.974-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-icmp",
            "log_config": [],
            "name": "k8s-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8seighth",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.387-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-outbond",
            "log_config": [],
            "name": "k8s-outbond",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-outbond",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-outbond"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8sfifth",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10257"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.531-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-kube-controller-manager",
            "log_config": [],
            "name": "k8s-kube-controller-manager",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-kube-controller-manager",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-fifth"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8sfirst",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.375-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-api-server",
            "log_config": [],
            "name": "k8s-api-server",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-api-server",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-first"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8sfourth",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10259"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.345-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-kube-scheduler",
            "log_config": [],
            "name": "k8s-kube-scheduler",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-kube-scheduler",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-fourth"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8ssecond",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2379-2380"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:40.503-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-etcd-client",
            "log_config": [],
            "name": "k8s-etcd-client",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-etcd-client",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-second"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8sseventh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.410-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-nodeport-services",
            "log_config": [],
            "name": "k8s-nodeport-services",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-nodeport-services",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-seventh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8ssixth",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10256"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:40.044-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-kube-proxy",
            "log_config": [],
            "name": "k8s-kube-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-kube-proxy",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-sixth"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8sthird",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10250"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:27.395-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-kubelet-api",
            "log_config": [],
            "name": "k8s-kubelet-api",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-kubelet-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-third"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "179",
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-03T00:13:39.879-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/profound-saga-429312-r3/global/firewalls/k8s-ssh",
            "log_config": [],
            "name": "k8s-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "priority": 1000,
            "project": "profound-saga-429312-r3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/firewalls/k8s-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-03T00:13:28.509-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/profound-saga-429312-r3/regions/us-central1/subnetworks/k8subnet1",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "k8subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "profound-saga-429312-r3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/regions/us-central1/subnetworks/k8subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-03T00:13:28.421-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/profound-saga-429312-r3/regions/us-central1/subnetworks/k8subnet2",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "k8subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "profound-saga-429312-r3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/regions/us-central1/subnetworks/k8subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20240726",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/zones/us-central1-c/disks/mastervm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/profound-saga-429312-r3/zones/us-central1-c/instances/mastervm",
            "instance_id": "4957698426650256989",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata_fingerprint": "SYSZwZj52lw=",
            "metadata_startup_script": "#!/bin/bash\n#\n# Common setup for all servers (Control Plane and Nodes)\n\nset -euxo pipefail\n\n# Kuernetes Variable Declaration\n\nKUBERNETES_VERSION=\"1.29.0-1.1\"\n\n# disable swap\nsudo swapoff -a\nmkdir stupid\n# keeps the swaf off during reboot\n(crontab -l 2\u003e/dev/null; echo \"@reboot /sbin/swapoff -a\") | crontab - || true\nsudo apt-get update -y\n\n\n# Install CRI-O Runtime\n\nOS=\"xUbuntu_22.04\"\n\nVERSION=\"1.28\"\n\n# Create the .conf fi [...]
            "name": "mastervm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.192.118.188",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/regions/us-central1/subnetworks/k8subnet1",
                "subnetwork_project": "profound-saga-429312-r3"
              }
            ],
            "project": "profound-saga-429312-r3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/zones/us-central1-c/instances/mastervm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-cni",
              "k8s-fifth",
              "k8s-first",
              "k8s-fourth",
              "k8s-http",
              "k8s-https",
              "k8s-icmp",
              "k8s-second",
              "k8s-ssh",
              "k8s-third"
            ],
            "tags_fingerprint": "TQIHLLyqROY=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.firewalls.google_compute_firewall.cni",
            "module.firewalls.google_compute_firewall.http",
            "module.firewalls.google_compute_firewall.https",
            "module.firewalls.google_compute_firewall.internal_connection",
            "module.firewalls.google_compute_firewall.k8sfifth",
            "module.firewalls.google_compute_firewall.k8sfirst",
            "module.firewalls.google_compute_firewall.k8sfourth",
            "module.firewalls.google_compute_firewall.k8ssecond",
            "module.firewalls.google_compute_firewall.k8sthird",
            "module.firewalls.google_compute_firewall.ssh",
            "module.subnets.google_compute_subnetwork.subnet1",
            "module.subnets.google_compute_subnetwork.subnet2",
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20240726",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 15,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/zones/us-central1-c/disks/workervm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/profound-saga-429312-r3/zones/us-central1-c/instances/workervm",
            "instance_id": "8594673842390066781",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "zjVTeQzNBiY=",
            "metadata_startup_script": "#!/bin/bash\n#\n# Common setup for all servers (Control Plane and Nodes)\n\nset -euxo pipefail\n\n# Kuernetes Variable Declaration\n\nKUBERNETES_VERSION=\"1.29.0-1.1\"\n\n# disable swap\nsudo swapoff -a\n\n# keeps the swaf off during reboot\n(crontab -l 2\u003e/dev/null; echo \"@reboot /sbin/swapoff -a\") | crontab - || true\nsudo apt-get update -y\n\n\n# Install CRI-O Runtime\n\nOS=\"xUbuntu_22.04\"\n\nVERSION=\"1.28\"\n\n# Create the .conf file to load t [...]
            "name": "workervm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.132.216.39",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/regions/us-central1/subnetworks/k8subnet2",
                "subnetwork_project": "profound-saga-429312-r3"
              }
            ],
            "project": "profound-saga-429312-r3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/zones/us-central1-c/instances/workervm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-http",
              "k8s-https",
              "k8s-icmp",
              "k8s-seventh",
              "k8s-sixth",
              "k8s-ssh",
              "k8s-third"
            ],
            "tags_fingerprint": "QMmv2D43P7E=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.firewalls.google_compute_firewall.http",
            "module.firewalls.google_compute_firewall.https",
            "module.firewalls.google_compute_firewall.internal_connection",
            "module.firewalls.google_compute_firewall.k8sseventh",
            "module.firewalls.google_compute_firewall.k8ssixth",
            "module.firewalls.google_compute_firewall.k8sthird",
            "module.firewalls.google_compute_firewall.ssh",
            "module.subnets.google_compute_subnetwork.subnet1",
            "module.subnets.google_compute_subnetwork.subnet2",
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/profound-saga-429312-r3/global/networks/k8s",
            "mtu": 0,
            "name": "k8s",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8855962352550438510",
            "project": "profound-saga-429312-r3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/profound-saga-429312-r3/global/networks/k8s"
          }
        }
      ]
    }
  ]
}